[package]
name = "rml_amf0"
version = "0.1.0"
description = "Modules for handling the encoding and decoding of data with Adobe's Action Message Format 0(AMF0 data format."
authors = ["Matthew Shapiro <me@mshapiro.net>"]
repository = "https://github.com/KallDrexx/rust-media-libs"
license = "MIT"

[dependencies]
byteorder = "0.5.3"
quick-error = "1.1.0"
