[package]
name = "rml_rtmp"
description = "Rust library for handling aspects of the RTMP protocol."
version = "0.2.0"
authors = ["Matthew Shapiro <me@mshapiro.net>"]
repository = "https://github.com/KallDrexx/rust-media-libs"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]

[dependencies]
rml_amf0 = "0.1.1"
byteorder = "1.2.1"
bytes = "0.4"
rand = "0.3"
failure = "0.1.1"
hmac = "0.6.2"
sha2 = "0.7.1"